--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -9,10 +9,20 @@
         android:id="@+id/homeFragment"
         android:name="com.android.fastfood.presentation.fragmenthome.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.android.fastfood.presentation.fragmentdetail.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="FoodMenu"
+            app:argType="com.android.fastfood.model.FoodMenu"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 </navigation>
