detail fragment and finishing

--- a/app/src/main/res/layout/item_linear_list.xml
+++ b/app/src/main/res/layout/item_linear_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,6 +25,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,9 +39,11 @@
             android:layout_marginHorizontal="8dp"
             android:textColor="@color/black"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_menu"
-            app:layout_constraintTop_toTopOf="@id/iv_menu"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.24"
             tools:text="Mie" />
 
         <TextView
@@ -47,10 +51,10 @@
             style="@style/TextAppearance.Material3.HeadlineSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
             android:text="Rp. 30.000"
-            app:layout_constraintBottom_toBottomOf="@id/iv_menu"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_menu"
+            app:layout_constraintStart_toEndOf="@id/iv_menu"
             app:layout_constraintTop_toBottomOf="@+id/tv_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
