--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -115,6 +115,8 @@
             android:id="@+id/rv_category"
             android:layout_width="match_parent"
             android:layout_height="90dp"
+
+            tools:listitem="@layout/item_category"
             android:layout_marginHorizontal="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +168,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="8dp"
         android:padding="10dp"
+        android:nestedScrollingEnabled="true"
+        tools:listitem="@layout/item_linear_list"
         />
 
 
