--- a/app/src/main/res/layout/item_grid_list.xml
+++ b/app/src/main/res/layout/item_grid_list.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/iv_menu"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
 
             <TextView
                 android:id="@+id/tv_menu_name"
-                style="@style/TextAppearance.Material3.HeadlineLarge"
+                style="@style/TextAppearance.Material3.BodyMedium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
@@ -57,13 +58,13 @@
 
             <TextView
                 android:id="@+id/tv_price"
-                style="@style/TextAppearance.Material3.HeadlineSmall"
-                android:layout_width="wrap_content"
+                style="@style/TextAppearance.Material3.BodyMedium"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Rp. 30.000"
                 android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="@id/iv_menu"
-                app:layout_constraintStart_toStartOf="@id/iv_menu"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_menu_name" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
