--- a/app/src/main/res/layout/item_linear_list.xml
+++ b/app/src/main/res/layout/item_linear_list.xml
@@ -33,8 +33,9 @@
 
         <TextView
             android:id="@+id/tv_menu"
-            style="@style/TextAppearance.Material3.HeadlineMedium"
+            style="@style/TextAppearance.Material3.BodyLarge"
             android:layout_width="0dp"
+            android:textSize="18dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:textColor="@color/black"
@@ -48,11 +49,12 @@
 
         <TextView
             android:id="@+id/menu_price"
-            style="@style/TextAppearance.Material3.HeadlineSmall"
+            style="@style/TextAppearance.Material3.BodyMedium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
-            android:text="Rp. 30.000"
+            android:layout_marginTop="10dp"
+            android:text="Rp.30.000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_menu"
             app:layout_constraintTop_toBottomOf="@+id/tv_menu" />
