--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,117 +2,93 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".presentation.fragmentProfile.ProfileFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/iv_profileImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="88dp"
-        android:src="@drawable/ic_profile"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_profile"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1">
+
+        <ImageView
+            android:id="@+id/iv_profile_pict"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:src="@tools:sample/avatars" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_edit_photo"
+            app:shapeAppearanceOverlay="@style/circleImageView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_edit" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        android:id="@+id/layout_form"
+        layout="@layout/layout_user_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_profile"
+        app:layout_constraintVertical_bias="0"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <FrameLayout
+        android:id="@+id/fl_btn_loading_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_form">
+
+        <Button
+            android:id="@+id/btn_change_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_change_profile" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/pb_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone" />
+    </FrameLayout>
 
     <TextView
-        android:id="@+id/tv_username"
+        android:id="@+id/tv_change_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="92dp"
-        android:text="@string/string_username_profile"
-        android:textSize="20sp"
+        android:padding="8dp"
+        android:text="@string/text_change_password"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_profileImage" />
+        app:layout_constraintTop_toBottomOf="@id/fl_btn_loading_state" />
 
     <TextView
-        android:id="@+id/tv_your_username"
+        android:id="@+id/tv_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Ivanston"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/tv_username"
-        app:layout_constraintTop_toBottomOf="@+id/tv_username"
-        tools:layout_editor_absoluteX="54dp" />
-
-    <View
-        android:id="@+id/line_username"
-        android:layout_width="330dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:background="#000000"
+        android:layout_marginTop="16dp"
+        android:padding="8dp"
+        android:text="@string/text_logout"
+        android:textColor="@color/red_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_your_username" />
-
-
-    <TextView
-        android:id="@+id/tv_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="Email"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_your_username"
-        app:layout_constraintTop_toBottomOf="@id/line_username" />
-
-    <TextView
-        android:id="@+id/tv_your_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tv_email"
-        android:text="ivansimbolon99@gmail.com"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/tv_email"
-        android:layout_marginTop="5dp"/>
-
-    <View
-        android:id="@+id/line_email"
-        android:layout_width="330dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:background="#000000"
-        app:layout_constraintTop_toBottomOf="@id/tv_your_email"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
-    <TextView
-        android:id="@+id/tv_no_telp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="No. Telepon"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_your_email"
-        app:layout_constraintTop_toBottomOf="@id/line_email" />
-
-
-    <TextView
-        android:id="@+id/tv_your_notelp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/tv_no_telp"
-        app:layout_constraintTop_toBottomOf="@id/tv_no_telp"
-        android:text="085159224145"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        />
-
-    <View
-        android:layout_width="330dp"
-        android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_your_notelp"
-        android:background="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="5dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_change_pwd" />
 
 
 
