--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,6 +123,13 @@
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_category" />
+            <include
+                android:id="@+id/layout_state_category"
+                layout="@layout/common_layout_content_state"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -164,12 +171,17 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
                 android:layout_marginHorizontal="8dp"
-                android:nestedScrollingEnabled="true"
                 android:padding="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cl_title_list"
                 tools:listitem="@layout/item_linear_list" />
+            <include
+                android:id="@+id/layout_state_menu"
+                layout="@layout/common_layout_content_state"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
